feature: 把打包的spa放到mpayemian中

--- a/views/index.html
+++ b/views/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>spa template</title>
+    <link rel="icon" href="/favicon.ico" />
+    <script defer="defer" src="/scripts/main.4e350.bundule.js"></script>
+    <link href="/styles/main.8754c.css" rel="stylesheet" />
   </head>
   <body>
-    HI {{data}}
+    hi {{data}}
+    <div id="app">loading....</div>
   </body>
 </html>
